src/objects/ContextMedia_Product__c.object
<CustomObject>
    <description>ContextMedia Products</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>(Account__r.Owner.FirstName + &quot; &quot; + Account__r.Owner.LastName)</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_paid_for_cycle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount paid for cycle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssignedSpecialitySale__c</fullName>
        <description>Returns true if the lead category of the Account associated to the product matches the product owner&apos;s speciality in his/her role name.</description>
        <formula>AND(NOT(ISPICKVAL(Account__r.LeadCategory__c, &quot;&quot;)),CONTAINS(Owner:User.UserRole.Name, TEXT(Account__r.LeadCategory__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Speciality Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMHID__c</fullName>
        <formula>Account__r.CMHID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMHID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color_on_Unconfirmed_Outreach__c</fullName>
        <label>Color on Unconfirmed Outreach</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Amount_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commission Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount - OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Product_Type__c, &quot;Tablet&quot;),
          ISPICKVAL(Product_Type__c, &quot;Wallboard&quot;),
          ISPICKVAL(Product_Type__c, &quot;Waiting Room Wifi&quot;),
          ISPICKVAL(Product_Type__c, &quot;Waiting Room Wifi - Sprint/Verizon&quot;)),
       of_Qualified_Prescribers__c &gt; 0,
       Quantity__c &gt; 0), 40, 0)
    +
    IF(AND(ISPICKVAL(Product_Type__c, &quot;Waiting Room Screen&quot;),
           of_Qualified_Prescribers__c &gt; 0,
           of_Qualified_Waiting_Rooms__c &gt; 0,
           Quantity__c &gt; 0),
    (100 *  IF(Quantity__c &gt;  of_Qualified_Waiting_Rooms__c, of_Qualified_Waiting_Rooms__c, Quantity__c))
  + IF(of_Qualified_Prescribers__c &gt; of_Qualified_Waiting_Rooms__c, (of_Qualified_Prescribers__c - of_Qualified_Waiting_Rooms__c) * 50, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Switchout__c</fullName>
        <formula>text(Account__r.CompetitorSwitchout__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Switchout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conf_to_Installed_WDO__c</fullName>
        <formula>CASE(MOD( SoldDate__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( DateInstalled__c - SoldDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( DateInstalled__c - SoldDate__c )/7)*5)-1</formula>
        <label>Conf. to Installed. - WDO</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConftoInstalled__c</fullName>
        <label>Conf. to Installed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_for_Scheduling_from_acct__c</fullName>
        <formula>Account__r.Contact_for_Scheduling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact for Scheduling from acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateConfirmed__c</fullName>
        <label>Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateInstalled__c</fullName>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateScheduled__c</fullName>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSpecificScreenUninstalled__c</fullName>
        <label>Date Specific Screen Uninstalled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Initial_Operation__c</fullName>
        <formula>Account__r.DateofInitialOperation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Initial Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Confirmation__c</fullName>
        <formula>TODAY() - DateConfirmed__c</formula>
        <label>Days Since Confirmation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sold__c</fullName>
        <formula>TODAY() -  SoldDate__c</formula>
        <label>Days Since Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITPhoneandEmail__c</fullName>
        <formula>Account__r.IT_Phone_and_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITPhoneandEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncentiveMailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Mailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncentiveNotes__c</fullName>
        <label>Incentive Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadCategory__c</fullName>
        <label>Lead Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>16 Aug AADE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb ACC CV Summit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb ACC Summit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Advances in GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb ASGE Improving Quality and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Baptist Cardio Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb CNIDBS Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb CO Neuro Conf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Critical Care Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb HX360/HIMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb International Stroke Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb LDN ID Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb May GI and Hep 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Melanoma and Cutaneous Malignancies Derm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Min Invasive Surgery Symposium (MISS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Mississippi Gastro Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb NC Neuro Society Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Pregnancy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb QCOR AHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Texas Neuro Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Western AF (cardio) Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Western AFib Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Feb Winship Cancer Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan ACG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan AF Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan Breakthroughs in Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan Cardio Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan Mayo Clinic Cardio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Jan Min Invasive GYN Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LightingBolt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lighting Bolt ($50 Bonus)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Hand_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Hand Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mount_type__c</fullName>
        <inlineHelpText>For Tablets: Floor mount, Wall mount, etc
For TVs: Wall mount, Table mount, etc</inlineHelpText>
        <label>Mount type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_from_act__c</fullName>
        <formula>IF(INCLUDES( Account__r.Network__c, &quot;Diabetes&quot;), &quot;Diabetes&quot; + BR(), NULL) +
IF(INCLUDES( Account__r.Network__c, &quot;Rheumatoid&quot;), &quot;Rheumatoid&quot; + BR(), NULL) +
IF(INCLUDES( Account__r.Network__c, &quot;Neurology&quot;), &quot;Neurology&quot; + BR(), NULL) +
IF(INCLUDES( Account__r.Network__c, &quot;Heart&quot;), &quot;Heart&quot; + BR(), NULL) +
IF(INCLUDES( Account__r.Network__c, &quot;Dermatology&quot;), &quot;Dermatology&quot; + BR(), NULL) +
IF(INCLUDES( Account__r.Network__c, &quot;GI&quot;), &quot;GI&quot; + BR(), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network from act</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesforOBD__c</fullName>
        <formula>Account__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NotesforOBD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfSales__c</fullName>
        <formula>IF(
   ISPICKVAL(Product_Type__c, &quot;Waiting Room Screen&quot;),
   IF( of_Qualified_Waiting_Rooms__c = 0,
   1,
   IF( Quantity__c &lt; of_Qualified_Waiting_Rooms__c,
       Quantity__c,
       of_Qualified_Waiting_Rooms__c)),
   Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objection_Reason__c</fullName>
        <label>Objection Reason</label>
        <picklist>
            <controllingField>Sales_Stage__c</controllingField>
            <picklistValues>
                <fullName>HIPAA Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Form Factor Too Big</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard No (no reason given)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/System Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Features/Functionality (fill out text field)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Room Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislike Televisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Playing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Patient WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onboarding_Overview__c</fullName>
        <label>Sale to Install Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Specialist__c</fullName>
        <formula>Account__r.onboarding_specialist__r.FirstName + &quot; &quot; +  Account__r.onboarding_specialist__r.LastName</formula>
        <label>Onboarding Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherObjectionDetails__c</fullName>
        <label>Other Objection Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_Number__c</fullName>
        <description>This field is being used on the Commission Report. Please do not delete without contacting Bogumil or Matt first.</description>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>Owner Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidOn__c</fullName>
        <label>Paid On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ph_email_for_sched_fr_acct__c</fullName>
        <formula>Account__r.Phone_for_schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ph email for sched fr acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting Room Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Room Wifi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Room Wifi - Sprint/Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>AHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Holder (Pair)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Slides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHN 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - AHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - CMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - DeHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - DHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - NHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - RHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Tablet - UHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHN 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Tablet - Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHN IR Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHN 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Room Wifi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Card $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay for Internet $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay for Internet $75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay for Internet $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay for Internet $100 for 1 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_Waiting_Rooms__c</fullName>
        <formula>Account__r.NumberOfQualifiedWaitingRooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Qualified Waiting Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Total # of products that we are installing</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Went_Unconfirmed_Outreach__c</fullName>
        <label>Reason Went Unconfirmed Outreach</label>
        <picklist>
            <controllingField>Sales_Stage__c</controllingField>
            <picklistValues>
                <fullName>Sale Was Passed Through, but I CANNOT Contact the Office in the Next 2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Contacting the Office, It Cannot Be Scheduled in 14 Days or Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC Did Not Have Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Get in Contact to Confirm/Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of Larger System - Further Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC/Physician Changed Their Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC/Physician is Remaining With Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Will Not Let Us Install - Even If We Provide Our Own Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Wants Our Other Products, Holding Off on This One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office/Location Does Not Exist Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Waiting Room Sales, No pics or Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferralOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContextMediaProducts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunded__c</fullName>
        <label>Refunded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <label>Related Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedMemberpractice__c</fullName>
        <label>Related Member practice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContextMedia_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesSubmissionDetails__c</fullName>
        <description>Filled by the sales submission workflow which captures a snapshot of the pertinent information in a qualified product.</description>
        <label>Sales Submission Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched &amp; Info Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Dialogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Hold On Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHS Hold On Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SignUp_to_Sched_WDO__c</fullName>
        <formula>CASE(MOD( DateScheduled__c - DATE(1985,6,24),7), 

0 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DateScheduled__c - SoldDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DateScheduled__c - SoldDate__c )/7)*5)-1</formula>
        <label>SignUp to Sched. - WDO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignUptoConf__c</fullName>
        <label>SignUp to Conf.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Up_to_Install_all_days__c</fullName>
        <formula>DateInstalled__c - SoldDate__c</formula>
        <label>Sign Up to Install (all days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SoldDate__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_delayed_confirmation_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold, delayed confirmation requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_delayed_installation_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold, delayed installation requested</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>